test/Fail/LocalRewriteMeta.err
LocalRewriteMeta.agda:14.15-19: error: [UnequalTerms]
The terms
  x
and
  zero
are not equal at type Nat
when checking that the expression ? has type x ≡ 0
